# trajopt

src/osgviewer/: CMakeLists.txt  osgviewer.cpp
src/trajopt/: bullet_collision_checker.cpp
